--- a/data/ndr.bib
+++ b/data/ndr.bib
@@ -1,7 +1,8 @@
-@article{csordas2021neural,
+@inproceedings{csordas2021neural,
       title={The Neural Data Router: Adaptive Control Flow in Transformers Improves Systematic Generalization}, 
       author={R\'obert Csord\'as and Kazuki Irie and J\"urgen Schmidhuber},
-      journal={Preprint arXiv:2110.07732},
-      year={2021},
-      month={October}
+      booktitle={Int. Conf. on Learning Representations (ICLR)},
+      year={2022},
+      month={April},
+      address={Virtual only}
 }
