--- a/data/dnc.bib
+++ b/data/dnc.bib
@@ -1,7 +1,7 @@
 @inproceedings{csordas2019improving,
   author    = {R{\'{o}}bert Csord{\'{a}}s and J{\"{u}}rgen Schmidhuber},
   title     = {Improving Differentiable Neural Computers Through Memory Masking, De-allocation, and Link Distribution Sharpness Control},
-  booktitle = confICLR,
+  booktitle = {Int. Conf. on Learning Representations (ICLR)},
   year      = {2019},
   address={New Orleans, LA, USA},
   month={May}
