--- a/data/fwtrafo.bib
+++ b/data/fwtrafo.bib
@@ -1,6 +1,8 @@
-@article{irie2021going,
+@inproceedings{irie2021going,
       title={Going Beyond Linear Transformers with Recurrent Fast Weight Programmers}, 
       author={Kazuki Irie and Imanol Schlag and R\'obert Csord\'as and J\"urgen Schmidhuber},
-      journal={Preprint arXiv:2106.06295},
-      year={2021}
+      booktitle={Proc. Advances in Neural Information Processing Systems (NeurIPS)},
+      year={2021},
+      month={December},
+      address={Virtual only}
 }
