--- a/data/generalist_clrs.bib
+++ b/data/generalist_clrs.bib
@@ -1,6 +1,7 @@
-@article{ibarz2022generalist,
+@inproceedings{ibarz2022generalist,
       title={A Generalist Neural Algorithmic Learner}, 
       author={Borja Ibarz, Vitaly Kurin, George Papamakarios, Kyriacos Nikiforou, Mehdi Bennani, R\'obert Csord\'as, Andrew Dudzik, Matko Bo\v{s}njak, Alex Vitvitskyi, Yulia Rubanova, Andreea Deac, Beatrice Bevilacqua, Yaroslav Ganin, Charles Blundell, Petar Veli\v{c}kovi\'c},
-      journal={Preprint arXiv:2209.11142},
+      booktitle={Learning on Graphs (LoG) 2022},
       year={2022},
+      month={December}
 }
