--- a/data/dual_form.bib
+++ b/data/dual_form.bib
@@ -1,7 +1,7 @@
-@article{irie2022dualform,
+@inproceedings{irie2022dualform,
       title={The Dual Form of Neural Networks Revisited: Connecting Test Time Predictions to Training Patterns via Spotlights of Attention}, 
       author={Kazuki Irie and R\'obert Csord\'as and J\"urgen Schmidhuber},
-      journal={Proc. Int. Conf. on Machine Learning (ICML)},
+      booktitle={Proc. Int. Conf. on Machine Learning (ICML)},
       year={2022},
       month={July},
       address={Baltimore, MD, USA}
