Fix the random positional encoding paper.

--- a/data/randpos.bib
+++ b/data/randpos.bib
@@ -1,6 +1,7 @@
 @inproceedings{ruoss2023randomized,
   author    = {Anian Ruoss and Gregoire Deletang and Tim Genewein and Jordi Grau-Moya and R{\'{o}}bert Csord{\'{a}}s and Mehdi Bennani and Shane Legg and Joel Veness},
   title     = {Randomized Positional Encodings Boost Length Generalization of Transformers},
-  booktitle = {ACL ARR},
+  booktitle = {Annual Meeting of the Association for Computational Linguistics (ACL)},
   year      = {2023},
+  month     = {July},
 }
