Update accepted papers

--- a/data/moe_attention.bib
+++ b/data/moe_attention.bib
@@ -1,7 +1,8 @@
 @inproceedings{csordas2023switchead,
       title={SwitchHead: Accelerating Transformers with Mixture-of-Experts Attention}, 
       author={R\'obert Csord\'as and Piotr Pi\k{e}kos and Kazuki Irie and J\"urgen Schmidhuber},
-      booktitle={Preprint arXiv:2312.07987},
-      year={2023},
-      month={December}
+      booktitle={NeurIPS 2024},
+      year={2024},
+      month={December},
+      address={Vancouver, Canada}
 }
