--- a/data/onion.bib
+++ b/data/onion.bib
@@ -1,7 +1,8 @@
 @inproceedings{csordas2024recurrent,
       title={Recurrent Neural Networks Learn to Store and Generate Sequences using Non-Linear Representations}, 
       author={R\'obert Csord\'as and Christopher Potts and Christopher D. Manning and Atticus Geiger},
-      booktitle={Preprint arXiv:2408.10920},
+      booktitle={Proc. BlackboxNLP, EMNLP},
       year={2024},
-      month={August}
+      month={November},
+      address={Miami, Florida, USA}
 }
