--- a/data/moeut.bib
+++ b/data/moeut.bib
@@ -1,7 +1,8 @@
 @inproceedings{csordas2024moeut,
       title={{MoEUT}: Mixture-of-Experts Universal Transformers}, 
       author={R\'obert Csord\'as and Kazuki Irie and J\"urgen Schmidhuber and Christopher Potts and Christopher D. Manning},
-      booktitle={Preprint arXiv:2405.16039},
+      booktitle={NeurIPS 2024},
       year={2024},
-      month={May}
+      month={December},
+      address={Vancouver, Canada}
 }
