--- a/data/effective_depth.bib
+++ b/data/effective_depth.bib
@@ -1,7 +1,8 @@
-@article{csordas2025effectivedepth,
+@inproceedings{csordas2025effectivedepth,
     title={Do Language Models Use Their Depth Efficiently?}, 
-    author={R\'obert Csord\'as and Christopher D. Manning and Christopher Potts}
-    journal={Preprint arXiv:2505.13898},
+    author={R\'obert Csord\'as and Christopher D. Manning and Christopher Potts},
+    booktitle={NeurIPS},
     year={2025},
-    month={May}
+    month={December},
+    address={San Diego, CA, USA}
 }
