--- a/data/moeut.bib
+++ b/data/moeut.bib
@@ -1,7 +1,7 @@
 @inproceedings{csordas2024moeut,
       title={{MoEUT}: Mixture-of-Experts Universal Transformers}, 
       author={R\'obert Csord\'as and Kazuki Irie and J\"urgen Schmidhuber and Christopher Potts and Christopher D. Manning},
-      booktitle={NeurIPS 2024},
+      booktitle={NeurIPS},
       year={2024},
       month={December},
       address={Vancouver, Canada}
